--- a/BestarProject/ShoppingMall/res/layout/item_agency_list.xml
+++ b/BestarProject/ShoppingMall/res/layout/item_agency_list.xml
@@ -74,7 +74,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/praiseCountTv"
+                android:id="@+id/agencyedTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -91,5 +91,6 @@
         android:layout_alignParentRight="true"
         android:background="@null"
         android:padding="10dp"
+        android:layout_centerVertical="true"
         android:src="@drawable/icon_call" />
 </RelativeLayout>
