--- a/BestarProject/ShoppingMall/res/layout/fragment_home.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_home.xml
@@ -101,9 +101,9 @@
 
                     <LinearLayout
                         android:id="@+id/ll_left"
+                        android:layout_below="@id/advertLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/advertLayout"
                         android:orientation="vertical">
 
                         <LinearLayout
@@ -1011,14 +1011,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="20dp"
                                 android:background="@color/line_mine_color"></View>
+
                             <LinearLayout
+                                android:id="@+id/bannerLayout"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:id="@+id/bannerLayout"
-                                >
+                                android:orientation="vertical">
 
-                             </LinearLayout>
+                            </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
                 </RelativeLayout>
