--- a/BestarProject/ShoppingMall/res/layout/item_release_viewpage.xml
+++ b/BestarProject/ShoppingMall/res/layout/item_release_viewpage.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@color/app_theme_color"
     android:orientation="vertical" >
 
     <TextView
