--- a/BestarProject/ShoppingMall/res/layout/fragment_mine.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_mine.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mine_loadding"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,12 +37,13 @@
                         android:orientation="vertical"
                         android:padding="20dp">
 
-                        <ImageView
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
+                        <com.manyi.mall.widget.imageView.CircleImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
                             android:layout_gravity="center_horizontal"
-                            android:contentDescription="@string/desc"
-                            android:src="@drawable/take_photos_list_no__thumbnail" />
+                            android:src="@drawable/head_default"
+                            app:border_width="2dp"
+                            app:border_color="@color/blue" />
 
                         <TextView
                             android:id="@+id/nameTV"
@@ -70,6 +73,7 @@
                             android:gravity="center_vertical"
                             android:paddingLeft="10dp"
                             android:text="我的代金券"
+                            android:id="@+id/Layout1"
                             android:textSize="16sp" />
 
                         <ImageView
