--- a/BestarProject/ShoppingMall/res/layout/fragment_mine.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_mine.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:toggle="http://schemas.android.com/apk/res-auto"
     android:id="@+id/mine_loadding"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,7 +33,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="#FF4864"
+                        android:background="@color/app_theme_color"
                         android:gravity="center_vertical"
                         android:orientation="vertical"
                         android:padding="20dp">
@@ -62,7 +63,7 @@
                         android:layout_marginTop="10dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -104,7 +105,7 @@
                         android:layout_marginTop="10dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -118,12 +119,21 @@
                             android:text="消息提醒"
                             android:textSize="16sp" />
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+
+                        <com.manyi.mall.widget.switchView.ToggleButton
+                            android:layout_width="54dp"
+                            toggle:onColor="@color/app_theme_color"
+                            android:id="@+id/switchBtn"
+                            toggle:offColor="#fff"
+                            toggle:spotColor="#fff"
+                            toggle:offBorderColor="#a1a1a1"
+                            toggle:borderWidth="1dp"
+                            android:paddingLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_height="30dp"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
-                            android:src="@drawable/ic_arrow" />
+                            />
 
                     </RelativeLayout>
 
@@ -132,7 +142,7 @@
                         android:layout_height="1dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -160,7 +170,7 @@
                         android:layout_height="1dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -195,7 +205,7 @@
                         android:layout_marginTop="10dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -223,7 +233,7 @@
                         android:layout_height="1dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -251,7 +261,7 @@
                         android:layout_height="1dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
@@ -291,7 +301,7 @@
                         android:layout_height="1dp"
                         android:background="@color/line_mine_color"></View>
 
-                    <RelativeLayout
+                    <RelativeLayout android:background="@color/white_action"
                         android:layout_width="match_parent"
                         android:layout_height="48dp">
 
