--- a/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
@@ -3,7 +3,7 @@
     android:id="@+id/forget_password_relatitive_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ecf0f1"
+    android:background="@color/app_bg_color"
     android:clickable="true" >
 
     <LinearLayout
@@ -14,7 +14,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="48dip"
-            android:background="@color/app_theme_color"
+            android:background="@color/color_ffffff"
             android:padding="0dp"
             android:tag="actionBar" >
 
@@ -32,7 +32,7 @@
                 android:layout_height="wrap_content"
                 android:text="找回密码"
                 android:layout_centerInParent="true"
-                android:textColor="#fff"
+                android:textColor="#333"
                 android:textSize="18sp"
                 />
             <TextView
@@ -41,7 +41,7 @@
                 android:gravity="center"
                 android:text="注册"
                 android:layout_alignParentRight="true"
-                android:textColor="#fff"
+                android:textColor="@color/app_theme_color"
                 android:textSize="18sp"
                 android:id="@+id/registerBtn"
                 />
@@ -52,7 +52,7 @@
             android:gravity="center"
             android:text="验证码将发送到手机上"
             android:layout_alignParentRight="true"
-            android:textColor="#666"
+            android:textColor="#66000000"
             android:textSize="18sp"
             android:layout_marginTop="10dp"
             android:layout_marginLeft="16dp"
@@ -65,9 +65,10 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:gravity="center_vertical"
+            android:background="@color/color_ffffff"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:orientation="horizontal" >
 
             <EditText
@@ -88,7 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_marginLeft="16dp"
-                android:background="@drawable/shape_forget_psw_code_btn_bg"
+                android:background="@drawable/selector_mine_exit_btn_bg"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:singleLine="true"
@@ -105,9 +106,9 @@
                 android:id="@+id/forget_code"
                 android:layout_width="fill_parent"
                 android:layout_height="48dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:background="@null"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:background="@color/color_ffffff"
                 android:gravity="center|left"
                 android:hint="请输入6位短信验证码"
                 android:textColorHint="#afafaf"
@@ -125,11 +126,11 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/shape_login_btn_bg_org"
+            android:background="@drawable/selector_submit_btn"
             android:gravity="center|center_horizontal"
             android:text="提交"
             android:textColor="@color/white_action"
-            android:textSize="16sp" />
+            android:textSize="22sp" />
     </LinearLayout>
 
 </RelativeLayout>
