--- a/BestarProject/ShoppingMall/res/drawable/shape_alltype_btn_bg_pre.xml
+++ b/BestarProject/ShoppingMall/res/drawable/shape_alltype_btn_bg_pre.xml
@@ -6,6 +6,6 @@
     <solid android:color="#a0a0a0" />
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="3dp" />
+    <corners android:radius="@dimen/btn_radius_size" />
 
 </shape>
