--- a/BestarProject/ShoppingMall/res/drawable/shape_forget_psw_code_btn_bg.xml
+++ b/BestarProject/ShoppingMall/res/drawable/shape_forget_psw_code_btn_bg.xml
@@ -4,6 +4,6 @@
 
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="10dp" />
+    <corners android:radius="@dimen/btn_radius_size" />
     <stroke android:color="@color/app_theme_color" android:width="1dp"></stroke>
 </shape>
