--- a/BestarProject/ShoppingMall/res/drawable/shape_login_input_bg.xml
+++ b/BestarProject/ShoppingMall/res/drawable/shape_login_input_bg.xml
@@ -4,7 +4,7 @@
 
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="10dp" />
-    <stroke android:color="#fff" android:width="0.5dp"></stroke>
+    <corners android:radius="@dimen/btn_radius_size" />
+    <stroke android:color="#fff" android:width="1dp"></stroke>
 
 </shape>
