--- a/BestarProject/ShoppingMall/res/drawable/shape_submit_btn_bg_org.xml
+++ b/BestarProject/ShoppingMall/res/drawable/shape_submit_btn_bg_org.xml
@@ -2,10 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <!-- 填充的颜色 -->
-    <solid android:color="#66000000" />
     <!-- 设置矩形的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="@dimen/btn_radius_size" />
+    <solid android:color="@color/app_theme_color"></solid>
 
 </shape>
