--- a/BestarProject/ShoppingMall/res/values/dimens.xml
+++ b/BestarProject/ShoppingMall/res/values/dimens.xml
@@ -27,5 +27,6 @@
     <dimen name="complete_info_margin_left_of_xing">10dp</dimen>
     <dimen name="complete_info_layout_height">48dp</dimen>
     <dimen name="complete_info_textview_width">100dp</dimen>
+    <dimen name="btn_radius_size">5dp</dimen>
 
 </resources>
