--- a/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
@@ -46,6 +46,11 @@
                 android:id="@+id/registerBtn"
                 />
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/app_theme_color"
+            ></View>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
