--- a/BestarProject/ShoppingMall/res/layout/fragment_register.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     android:id="@+id/register_relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/register_background"
+    android:background="@color/app_bg_color"
     android:clickable="true" >
 
     <LinearLayout
@@ -16,7 +16,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="48dip"
-            android:background="@color/app_theme_color"
+            android:background="@color/color_ffffff"
             android:padding="0dp"
             android:tag="actionBar"
             tools:ignore="UselessParent" >
@@ -30,15 +30,18 @@
                 />
 
             <TextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:background="@drawable/text_down_selector"
                 android:text="@string/register_one"
-                android:textColor="#ffffffff"
+                android:textColor="#333"
                 android:textSize="18sp" />
         </RelativeLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/app_theme_color"
+            ></View>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -46,120 +49,42 @@
             android:orientation="vertical"
             tools:ignore="UselessLeaf" >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal"
-                tools:ignore="UselessParent" >
 
                 <EditText
                     android:id="@+id/phone_number"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
-                    android:layout_marginTop="12dp"
-                    android:background="@drawable/textview_selector"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/color_ffffff"
                     android:gravity="center|left"
                     android:hint="@string/register_phone_number"
                     android:maxLength="11"
-                    android:numeric="integer"
-                    android:textSize="16sp"
-                    tools:ignore="TextFields,Deprecated" />
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/tv_unable_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="8dp"
-                android:text="无效的手机号码"
-                android:textColor="#ff4404"
-                android:textSize="12sp"
-                android:visibility="gone" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal"
-                tools:ignore="UselessParent" >
-
-                <EditText
-                    android:id="@+id/sms_captcha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/textview_selector"
-                    android:gravity="center|left"
-                    android:hint="@string/register_captcha"
-                    android:maxLength="6"
-                    android:numeric="integer"
-                    android:textSize="16sp"
-                    tools:ignore="TextFields,Deprecated" />
-
-                <Button
-                    android:id="@+id/sms_register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="32dp"
-                    android:layout_gravity="bottom"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/start_selector"
                     android:paddingLeft="16dp"
-                    android:paddingRight="16dp"
-                    android:singleLine="true"
-                    android:text="@string/register_get_captcha"
-                    android:textColor="@color/tetx_title_color"
+                    android:numeric="integer"
                     android:textSize="16sp"
-                    tools:ignore="InefficientWeight" />
-            </LinearLayout>
+                    android:singleLine="true"
+                    android:textColorHint="#44000000"
+                    tools:ignore="TextFields,Deprecated" />
 
-            <LinearLayout
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal"
-                tools:ignore="UselessParent" >
-
+                android:layout_height="1dp"
+                android:background="#e1e1e1"></View>
                 <EditText
                     android:id="@+id/register_pwd"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
-                    android:background="@drawable/textview_selector"
+                    android:background="@color/color_ffffff"
                     android:gravity="center|left"
-                    android:hint="@string/password_size"
+                    android:paddingLeft="16dp"
+                    android:hint="请输入密码"
                     android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColorHint="#44000000"
                     android:maxLength="20"
                     android:textSize="16sp"
                     tools:ignore="TextFields,Deprecated" />
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:orientation="horizontal"
-                tools:ignore="UselessParent" >
-
-                <EditText
-                    android:id="@+id/confirm_pwd"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:background="@drawable/textview_selector"
-                    android:gravity="center|left"
-                    android:hint="@string/register_confirm_password"
-                    android:imeOptions="actionDone"
-                    android:inputType="textPassword"
-                    android:maxLength="20"
-                    android:password="true"
-                    android:textSize="16sp"
-                    tools:ignore="TextFields,Deprecated" />
-            </LinearLayout>
 
             <Button
                 android:id="@+id/register_next"
@@ -168,10 +93,10 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
-                android:background="@drawable/shape_login_btn_bg_org"
+                android:background="@drawable/selector_submit_btn"
                 android:text="@string/register_next"
                 android:textColor="@color/tetx_title_color"
-                android:textSize="16sp" />
+                android:textSize="22sp" />
         </LinearLayout>
     </LinearLayout>
 
