--- a/BestarProject/ShoppingMall/res/layout/fragment_home.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_home.xml
@@ -26,25 +26,19 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/shape_home_top_search_bg"
                 android:gravity="center"
+                android:id="@+id/searchLayout"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/realsehomeicon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/searchfield_ic_search"
-                    android:contentDescription="@string/desc" />
-
-                <EditText
+                <TextView
                     android:id="@+id/searchEt"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:gravity="center"
-                    android:hint="请输入搜索内容"
-                    android:minWidth="150dp"
-                    android:textColor="@color/white_action"
-                    android:textColorHint="#a1a1a1" />
+                    android:drawableLeft="@drawable/searchfield_ic_search"
+                    android:text="请输入搜索内容"
+                    android:textColor="#a1a1a1"
+                     />
             </LinearLayout>
         </RelativeLayout>
 
