修改我的收藏
为我的收藏模块增加编辑功能，

--- a/BestarProject/ShoppingMall/res/layout/item_collect_list.xml
+++ b/BestarProject/ShoppingMall/res/layout/item_collect_list.xml
@@ -6,7 +6,13 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="12dp">
-
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkBox"
+        android:visibility="gone"
+        android:layout_marginRight="10dp"
+        />
     <ImageView
         android:layout_width="80dp"
         android:layout_height="wrap_content"
