--- a/BestarProject/ShoppingMall/res/layout/fragment_my_collect.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_my_collect.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ecf0f1"
+    android:background="@color/app_bg_color"
     android:clickable="true"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/app_theme_color"
         android:padding="0dp"
-        android:tag="actionBar" >
+        android:tag="actionBar">
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,13 +21,15 @@
             android:text="我的收藏"
             android:textColor="#ffffffff"
             android:textSize="18sp" />
+
         <TextView
+            android:id="@+id/editBtn"
             android:layout_width="60dp"
             android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
             android:gravity="center"
             android:text="编辑"
             android:textColor="#ffffffff"
-            android:layout_alignParentRight="true"
             android:textSize="16sp" />
     </RelativeLayout>
 
@@ -34,10 +37,59 @@
         android:id="@+id/myCollectListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/topLayout"
+        android:background="@null"
         android:cacheColorHint="#00000000"
-        android:divider="#d1d5d8"
-        android:scrollbars="none"
-        android:dividerHeight="1dp" >
-    </ListView>
+        android:divider="#00000000"
+        android:dividerHeight="10dp"
+        android:scrollbars="none"></ListView>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/bottomLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/app_bg_color"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:visibility="gone"
+        >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/mineselect"></View>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/app_bg_color"
+            android:padding="16dp">
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="全选"
+                android:textColor="#333"
+                android:textSize="18sp" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/selector_submit_btn"
+                android:drawableLeft="@drawable/ic_action_discard"
+                android:paddingBottom="10dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="10dp"
+                android:text="删除"
+                android:textColor="@color/color_ffffff"
+                android:textSize="18sp" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+</RelativeLayout>
