--- a/BestarProject/ShoppingMall/res/layout/fragment_my_agency.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_my_agency.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     android:background="#ecf0f1"
     android:clickable="true"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/app_theme_color"
         android:padding="0dp"
-        android:tag="actionBar" >
+        android:tag="actionBar">
 
         <TextView
             android:layout_width="wrap_content"
@@ -20,24 +20,23 @@
             android:text="我的代理"
             android:textColor="#ffffffff"
             android:textSize="18sp" />
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="编辑"
-            android:textColor="#ffffffff"
-            android:layout_alignParentRight="true"
-            android:textSize="16sp" />
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/myAgencyListView"
+    <com.manyi.mall.widget.refreshview.NLPullRefreshView
+        android:id="@+id/refreshable_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:cacheColorHint="#00000000"
-        android:divider="#d1d5d8"
-        android:scrollbars="none"
-        android:dividerHeight="1dp" >
-    </ListView>
+        android:background="@color/color_ffffff"
+        android:orientation="vertical">
 
+        <ListView
+            android:id="@+id/myAgencyListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@null"
+            android:cacheColorHint="#00000000"
+            android:divider="#00000000"
+            android:dividerHeight="10dp"
+            android:scrollbars="none"></ListView>
+    </com.manyi.mall.widget.refreshview.NLPullRefreshView>
 </LinearLayout>
