--- a/BestarProject/ShoppingMall/res/layout/item_collect_list.xml
+++ b/BestarProject/ShoppingMall/res/layout/item_collect_list.xml
@@ -5,13 +5,12 @@
     android:background="@drawable/section_item_selector"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:padding="12dp">
+    android:padding="10dp">
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/checkBox"
         android:visibility="gone"
-        android:layout_marginRight="10dp"
         />
     <ImageView
         android:layout_width="80dp"
@@ -38,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:text="凯奇集团"
                 android:textColor="#dd000000"
-                android:textSize="16sp" />
+                android:textSize="@dimen/list_item_title_text_size" />
 
             <TextView
                 android:id="@+id/cityNameTv"
@@ -47,7 +46,7 @@
                 android:layout_alignParentRight="true"
                 android:text="上海"
                 android:textColor="#dd000000"
-                android:textSize="16sp" />
+                android:textSize="@dimen/list_item_title_text_size" />
         </RelativeLayout>
 
         <TextView
@@ -57,7 +56,7 @@
             android:layout_marginTop="6dp"
             android:text="中国最具权威幼儿园设计"
             android:textColor="#8a000000"
-            android:textSize="14sp" />
+            android:textSize="@dimen/list_item_content_text_size" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,9 +66,8 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -78,22 +76,20 @@
                     android:layout_height="wrap_content"
                     android:text="点击率"
                     android:textColor="#8a000000"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/list_item_content_text_size" />
 
                 <TextView
                     android:id="@+id/clickCountTv"
-                    android:layout_width="wrap_content"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:text="3256"
                     android:textColor="#ff5104"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/list_item_content_text_size" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -102,22 +98,20 @@
                     android:layout_height="wrap_content"
                     android:text="询问度"
                     android:textColor="#8a000000"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/list_item_content_text_size" />
 
                 <TextView
                     android:id="@+id/visitCountTv"
-                    android:layout_width="wrap_content"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:text="3256"
                     android:textColor="#ff5104"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/list_item_content_text_size" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -126,16 +120,15 @@
                     android:layout_height="wrap_content"
                     android:text="赞"
                     android:textColor="#8a000000"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/list_item_content_text_size" />
 
                 <TextView
                     android:id="@+id/praiseCountTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
                     android:text="3256"
                     android:textColor="#ff5104"
-                    android:textSize="14sp" />
+                    android:textSize="@dimen/list_item_content_text_size" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
