--- a/BestarProject/ShoppingMall/res/layout/fragment_agency_pay.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_agency_pay.xml
@@ -12,7 +12,14 @@
         android:background="@color/app_theme_color"
         android:padding="0dp"
         android:tag="actionBar">
-
+        <ImageButton
+            android:id="@+id/area_back"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:background="@null"
+            android:gravity="center"
+            android:src="@drawable/ic_action_up" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
