分享功能修改
为分享功能界面增加动画效果。。。。

--- a/BestarProject/ShoppingMall/res/layout/fragment_share.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_share.xml
@@ -20,7 +20,8 @@
         android:layout_alignParentBottom="true"
         android:background="@color/color_ffffff"
         android:orientation="horizontal"
-        android:padding="10dp">
+        android:id="@+id/bottomShareLayout"
+        android:padding="20dp">
 
         <TextView
             android:id="@+id/wechatShareBtn"
