--- a/BestarProject/ShoppingMall/res/layout/fragment_home.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_home.xml
@@ -939,7 +939,7 @@
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:text="幼儿园环境设计"
+                                        android:text="环境设计"
                                         android:textColor="#B2DED5"
                                         android:textSize="@dimen/_16_text_size" />
 
