调通用户相关所有接口，
调通用户相关所有接口，

--- a/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
+++ b/BestarProject/ShoppingMall/res/layout/fragment_forget_password.xml
@@ -90,7 +90,7 @@
                 android:textSize="16sp" />
 
             <Button
-                android:id="@+id/login_code"
+                android:id="@+id/getPswCodeBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_marginLeft="16dp"
@@ -125,7 +125,7 @@
             android:layout_height="1dp"
             android:background="#e1e1e1"></View>
         <Button
-            android:id="@+id/get_code_next"
+            android:id="@+id/getCodeNextBtn"
             android:layout_width="fill_parent"
             android:layout_height="42dp"
             android:layout_marginLeft="16dp"
