--- a/BestarProject/ShoppingMall/res/layout/view_tab_indicator.xml
+++ b/BestarProject/ShoppingMall/res/layout/view_tab_indicator.xml
@@ -1,20 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginLeft="-3dip"
-    android:layout_marginRight="-3dip"
-    android:padding="1dp"
-    android:background="@drawable/main_tab_selector">
-
-    <TextView
-        android:id="@+id/main_tab_item"
-        android:layout_width="wrap_content"
+    android:layout_height="80dp"
+    android:background="@color/color_ffffff">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:drawablePadding="8dp"
+        android:orientation="vertical"
         android:gravity="center"
-        android:textColor="#fff"
-        android:textSize="16sp" />
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/home_h"
+            android:id="@+id/iconView"
+            />
+        <TextView
+            android:id="@+id/main_tab_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="#ff0000"
+            android:text="首页"
+            android:layout_marginTop="5dp"
+            android:textSize="16sp" />
+        </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#22333333"
+        ></View>
 
 </RelativeLayout>
