--- a/BestarProject/ShoppingMall/res/values/colors.xml
+++ b/BestarProject/ShoppingMall/res/values/colors.xml
@@ -122,5 +122,7 @@
 
     <color name="app_theme_color">#FF4864</color>
     <color name="app_bg_color">#EEEEEE</color>
+    <color name="main_tab_text_color">#7f7f7f</color>
+    <color name="main_tab_text_color_h">#FF4864</color>
 
 </resources>
