--- a/BestarProject/ShoppingMall/res/values/colors.xml
+++ b/BestarProject/ShoppingMall/res/values/colors.xml
@@ -21,7 +21,7 @@
     <color name="gray_1">#D0D0D0</color>
     <color name="house_image_others">#42000000</color>
     <color name="house_image_red">#e60404</color>
-    <color name="line_mine_color">#e1e1e1</color>
+    <color name="line_mine_color">#887f7f7f</color>
 
     <color name="red_light">#ffff4444</color>
     <color name="green_light">#ff99cc00</color>
